--- a/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
+++ b/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
@@ -195,6 +195,7 @@
     <ClCompile Include="PointLight.cpp" />
     <ClCompile Include="RasterizerState.cpp" />
     <ClCompile Include="RenderTarget.cpp" />
+    <ClCompile Include="RenderTexture.cpp" />
     <ClCompile Include="Sampler.cpp" />
     <ClCompile Include="RenderStep.cpp" />
     <ClCompile Include="Surface.cpp" />
@@ -257,6 +258,7 @@
     <ClInclude Include="Mouse.h" />
     <ClInclude Include="NullPixelShader.h" />
     <ClInclude Include="RasterizerState.h" />
+    <ClInclude Include="RenderTexture.h" />
     <ClInclude Include="TextParser.h" />
     <ClInclude Include="RenderPass.h" />
     <ClInclude Include="PixelConstantBuffer.h" />
