--- a/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
+++ b/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
@@ -183,6 +183,7 @@
     <ClCompile Include="Imgui\imgui_impl_win32.cpp" />
     <ClCompile Include="IndexBuffer.cpp" />
     <ClCompile Include="InputLayout.cpp" />
+    <ClCompile Include="InstancedMeshRenderer.cpp" />
     <ClCompile Include="RenderJob.cpp" />
     <ClCompile Include="Keyboard.cpp" />
     <ClCompile Include="Log.cpp" />
@@ -217,6 +218,8 @@
   <ItemGroup>
     <ClInclude Include="App.h" />
     <ClInclude Include="BaseMesh.h" />
+    <ClInclude Include="InstancedMeshRenderer.h" />
+    <ClInclude Include="VertexAttribute.h" />
     <ClInclude Include="Binding.h" />
     <ClInclude Include="Colors.h" />
     <ClInclude Include="Bindable.h" />
@@ -282,6 +285,7 @@
     <ClInclude Include="Topology.h" />
     <ClInclude Include="TransformCbuf.h" />
     <ClInclude Include="Vertex.h" />
+    <ClInclude Include="VertexAttributeDesc.h" />
     <ClInclude Include="VertexBuffer.h" />
     <ClInclude Include="VertexBufferData.h" />
     <ClInclude Include="VertexConstantBuffer.h" />
